# cctb

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format.yml  cmake.yml
cmake/: compile_options.cmake  extra_compile_options.cmake
src/: CMakeLists.txt  FloatPointHelpers.h  cctb.cpp  lattice.cpp  lattice.h  main.cpp
src/Geometry/: Line.cpp  Line.h  Mesh.h  Point.h  Vector.h
src/Geometry/Region/: Circle.cpp  Circle.h  Parallelogram.cpp  Parallelogram.h  Rectangle.cpp  Rectangle.h  Region.h  Square.h
src/Lattice/: Lattice.cpp  Lattice.h  lattice.cpp  lattice.h
src/LinearAlgebra/: BlasImpl.cpp  BlasImpl.h  ContiguousArray.h  Impl.cpp  Impl.h  LapackImpl.cpp  LapackImpl.h  Lazy.h  Matrix.cpp  Matrix.h  NBuffer.h  NumericArray.cpp  NumericArray.h  Vector.cpp  Vector.h
src/Memory/: RefCounted.h  RefPtr.h
src/Painter/: Asymptote.cpp  Painter.h  Tikz.cpp
src/cctb/: lattice.h  matrix.h  vec.h
test/: CMakeLists.txt  TestMatchers.h  basic-test.cpp  test-array.cpp  test-geometry.cpp  test-lattice.cpp  test-lazy.cpp  test-matrix.cpp  test-vector.cpp
tools/: format  pragma_once
